Added CUDA error helper functions

--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -71,6 +71,7 @@
     <ClInclude Include="brendancuda_fields_points.cuh">
       <Filter>Fields</Filter>
     </ClInclude>
+    <ClInclude Include="brendancuda_cudaerrorhelpers.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="brendancuda_ai_mlpb_mlpbls.cuh.tt">
@@ -173,6 +174,7 @@
     </CudaCompile>
     <CudaCompile Include="brendancuda_fixedvectors.cu" />
     <CudaCompile Include="brendancuda_math.cu" />
+    <CudaCompile Include="brendancuda_cudaerrorhelpers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="brendancuda_ai_evolution_evaluation_output_implementations_uniquevalues.cpp">
