--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output.h" />
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output_implementations_proliferation.h" />
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output_implementations_uniquevalues.h" />
+    <ClInclude Include="brendancuda_cudaerrorhelpers.h" />
     <ClInclude Include="brendancuda_fields_points.cuh" />
     <CustomBuild Include="brendancuda_fields_points.cuh.tt">
       <FileType>Document</FileType>
@@ -169,6 +170,7 @@
     <CudaCompile Include="brendancuda_ai_mlp_mlpl.cu" />
     <CudaCompile Include="brendancuda_ai_mlpb.cu" />
     <CudaCompile Include="brendancuda_binary_basic.cu" />
+    <CudaCompile Include="brendancuda_cudaerrorhelpers.cpp" />
     <CudaCompile Include="brendancuda_devicecopy.cu" />
     <CudaCompile Include="brendancuda_fields_points.cu" />
     <CustomBuild Include="brendancuda_fields_points.cu.tt">
