Added option to debug nvcc linker
Added --expt-relaxed-constexpr to debug command line linker call, for symmetry.

--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -63,6 +63,7 @@
     <CudaLink>
       <AdditionalDependencies>cublas.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <PerformDeviceLink>false</PerformDeviceLink>
+      <AdditionalOptions>--expt-relaxed-constexpr %(AdditionalOptions)</AdditionalOptions>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
