Added cross-memory get/sets

--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output.h" />
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output_implementations_proliferation.h" />
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output_implementations_uniquevalues.h" />
+    <ClInclude Include="brendancuda_crossassignment.h" />
     <ClInclude Include="brendancuda_cudaerrorhelpers.h" />
     <ClInclude Include="brendancuda_fields_points.cuh" />
     <CustomBuild Include="brendancuda_fields_points.cuh.tt">
