--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -124,7 +124,7 @@
       <OutputItemType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">CudaCompile</OutputItemType>
     </CustomBuild>
     <ClInclude Include="brendancuda_math.cuh" />
-    <ClInclude Include="brendancuda_nets_net.cuh" />
+    <ClInclude Include="brendancuda_nets_net.h" />
     <ClInclude Include="brendancuda_random_anyrng.cuh" />
     <ClInclude Include="brendancuda_serialization_arrays.cuh" />
     <ClInclude Include="brendancuda_binary_basic.cuh" />
