--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -98,6 +98,8 @@
     <ClInclude Include="brendancuda_ai_evolution_evaluation_output_implementations_uniquevalues.h" />
     <ClInclude Include="brendancuda_crossassignment.h" />
     <ClInclude Include="brendancuda_cudaerrorhelpers.h" />
+    <ClInclude Include="brendancuda_fields_dfield2.cuh" />
+    <ClInclude Include="brendancuda_fields_field2.cuh" />
     <ClInclude Include="brendancuda_fields_points.cuh" />
     <CustomBuild Include="brendancuda_fields_points.cuh.tt">
       <FileType>Document</FileType>
