--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -83,6 +83,7 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
+      <AdditionalOptions>--expt-relaxed-constexpr %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
     <CudaLink>
       <AdditionalDependencies>cublas.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -100,6 +101,7 @@
     <ClInclude Include="brendancuda_cudaerrorhelpers.h" />
     <ClInclude Include="brendancuda_fields_dfield2.cuh" />
     <ClInclude Include="brendancuda_fields_field2.cuh" />
+    <ClInclude Include="brendancuda_nets_makenet.h" />
     <ClInclude Include="brendancuda_points.cuh" />
     <CustomBuild Include="brendancuda_points.cuh.tt">
       <FileType>Document</FileType>
@@ -172,6 +174,7 @@
     <CudaCompile Include="brendancuda_binary_basic.cu" />
     <CudaCompile Include="brendancuda_cudaerrorhelpers.cpp" />
     <CudaCompile Include="brendancuda_devicecopy.cu" />
+    <CudaCompile Include="brendancuda_nets_makenet.cu" />
     <CudaCompile Include="brendancuda_points.cu" />
     <CustomBuild Include="brendancuda_points.cu.tt">
       <FileType>Document</FileType>
