--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -101,6 +101,8 @@
     <ClInclude Include="brendancuda_cudaerrorhelpers.h" />
     <ClInclude Include="brendancuda_fields_dfield2.cuh" />
     <ClInclude Include="brendancuda_fields_field2.cuh" />
+    <ClInclude Include="brendancuda_fields_instance2.cuh" />
+    <ClInclude Include="brendancuda_fields_instance3.cuh" />
     <ClInclude Include="brendancuda_nets_makenet.h" />
     <ClInclude Include="brendancuda_points.cuh" />
     <CustomBuild Include="brendancuda_points.cuh.tt">
