--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="brendancuda_fields_instance2.cuh">
       <Filter>Fields</Filter>
     </ClInclude>
+    <ClInclude Include="brendancuda_ai_mlp_fixedmlp.cuh">
+      <Filter>AI\MLP</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="brendancuda_ai_mlpb_mlpbls.cuh.tt">
